# ChangeLog for sys-apps/keyfuzz
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2008; Federico Ferri (mescalinum) <mescalinum@gmail.com>
  keyfuzz-0.2.ebuild:
  Added --disable-lynx, as the lynx generated docs are already bundled, and it
  was giving a configure error if no lynx installed

  21 Aug 2007; Federico Ferri (federico__) <mescalinum@gmail.com>
  +metadata.xml, +keyfuzz-0.2.ebuild:
  New Ebuild for bug 185788
