@@ -1,4 +1,4 @@
 DIST keyfuzz-0.2.tar.gz 97089 RMD160 24ee84cb3f2d4dd91de38b9b936500cd9a978ddb SHA1 740c864de8abb9223cc8ed09a8c01a263da8fb83 SHA256 d3cea89fc0a66e37026a947263f85f2075dbabda017ad60bf3d6a1bb63f56977
-EBUILD keyfuzz-0.2.ebuild 582 RMD160 23cf61da703b35b4d1f102bb59c682bbe5fdcb99 SHA1 b56e351fb89ae733e75bd3e94c69e880f360b6ea SHA256 7dc56e0946812514b970970d8111b8177b449127fad90f8f3e0c042126252aa7
-MISC ChangeLog 470 RMD160 acdf6a9f2f68598fee66f9647ca9d3c689e028be SHA1 e39069ae6295033e23418b08eae18d78b6ed5520 SHA256 101c46e8c16ff0e099174e746d34516bf6623b19019d3ed6b983d2b69913a29f
+EBUILD keyfuzz-0.2.ebuild 628 RMD160 762a216360d83131b388a9cc487a39b9188459a7 SHA1 cfa7346c37da5db1673619c6a05da80d9210fa4e SHA256 770fd47a4b3bf30851ff88cf098e62fd938abead663a4b6d25a30c9bf28374e7
+MISC ChangeLog 577 RMD160 64aa17070f77efb4a311908fd114777063b6e54e SHA1 c703f60170d518f433bce90a571154e5799061bf SHA256 0d5ba7f7f7c7acdccc37ee828f9cd070066802d5d62ecd3313194abff46427f5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
